# scope-ai-language

./: .gitignore  README.md
scope-bus/: README.md  pyproject.toml
scope-bus/src/scope_bus/: __init__.py  _plugin.py  frames.py  midi.py  overlay.py  prompt.py  schema.py  udp.py
scope-language/: README.md  pyproject.toml
scope-language/src/scope_language/: __init__.py  _base.py  _plugin.py  llm.py  vlm.py
scope-llm-ollama/: README.md  pyproject.toml
scope-llm-ollama/src/scope_llm_ollama/: __init__.py  pipeline.py  schema.py
scope-osc-prompt/: README.md  pyproject.toml
scope-osc-prompt/src/scope_osc_prompt/: __init__.py  pipeline.py  schema.py
scope-test-text-log/: README.md  pyproject.toml
scope-test-text-log/src/scope_test_text_log/: __init__.py  overlay.py  pipeline.py  schema.py
scope-udp-prompt/: README.md  pyproject.toml
scope-udp-prompt/src/scope_udp_prompt/: __init__.py  pipeline.py  schema.py
scope-vlm-ollama/: README.md  pyproject.toml
scope-vlm-ollama/src/scope_vlm_ollama/: __init__.py  pipeline.py  schema.py
scripts/: setup-ollama-pod.sh
