[project]
name = "scope-test-text-log"
version = "0.1.0"
description = "Debug monitor: logs and overlays all kwargs flowing through the pipeline chain"
requires-python = ">=3.12"
dependencies = ["scope-bus"]

[project.entry-points."scope"]
scope_test_text_log = "scope_test_text_log"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scope_test_text_log"]
